--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <script type="application/javascript" src="../js/browser-polyfill.js"></script>
     <script src="popup.js"></script>
     <style>
         .button {
