Fix script type

--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <script type="application/javascript" src="../js/browser-polyfill.js"></script>
-    <script src="popup.js"></script>
+    <script type="application/javascript" src="popup.js"></script>
     <style>
         .button {
             border-radius: 4px;
