Refactor popup templating logic

--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -18,26 +18,14 @@
             font-weight: 300;
             cursor: pointer;
         }
-        #prebid-bidder-stats {
-            display: none;
-        }
-
-        #prebid-winner-stats {
-            display: none;
-        }
     </style>
 </head>
 <body>
-<div id="prebid-bidders"></div>
-<div id="prebid-winner"></div>
-<div id="prebid-bidder-stats">Number of requests from the top bidders to date</div>
-<div id="prebid-winner-stats">Number of auctions won by bidder</div>
-
-<div id="control-row">
-    <div class="button-control">
-        <div class="button" id="prebid-stats-button">Stats</div>
-    </div>
-</div>
-
-</body>
+    <div id="app"></div>
+        <div id="control-row">
+            <div class="button-control">
+                <div class="button" id="prebid-stats-button">Stats</div>
+            </div>
+        </div>
+    </body>
 </html>
